<resources>
    <string name="app_name">GabotApp</string>
    <string name="refresh">Refresh</string>
    <string name="baud_rate">Baud Rate:</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="send">Send</string>
    <string name="clear_log">Clear Log</string>
    <string name="enter_message">Enter message…</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_connected">Connected</string>
    <string name="simulation_mode">Simulation</string>
</resources>